fixed scroll bar dark mode

--- a/style.css
+++ b/style.css
@@ -408,16 +408,16 @@ section#devices table tbody#devices-list tr td img {
         border-bottom: 1px solid white;
     }
 
-    .not-safari::-webkit-scrollbar {
+    .not-apple::-webkit-scrollbar {
         background-color: #202324;
         color: #aba499;
     }
 
-    .not-safari::-webkit-scrollbar-corner {
+    .not-apple::-webkit-scrollbar-corner {
         background-color: #181a1b;
     }
 
-    .not-safari::-webkit-scrollbar-thumb {
+    .not-apple::-webkit-scrollbar-thumb {
         background-color: #454a4d;
     }
 }
